--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,12 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  height: min-content;
 }
 
 .slide img {
   width: 100%;
-  height: auto;
+  height:auto;
   display: block;
   border: 1px solid white;
 }
